tests/ui/parser/empty-impl-semicolon.rs
struct Foo;
impl Foo; //~ ERROR expected `{}`, found `;`

fn main() {}
